syntax = "proto3";
package comdex.asset.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/comdex-official/comdex/x/asset/types";
option (gogoproto.equal_all)           = false;
option (gogoproto.goproto_getters_all) = false;

message ExtendedPairVault {
    uint64 pair_id           = 1;
    string liquidation_ratio = 2 [
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable)   = false,
      (gogoproto.moretags)   = "yaml:\"liquidation_ratio\""
    ];
    string unliquidation_ratio  = 3 [
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable)   = false,
      (gogoproto.moretags)   = "yaml:\"unliquidation_ratio\""
    ];
    string stability_fee        = 4[ (gogoproto.moretags) = "yaml:\"stability_fee\"" ];
    string closing_fee          = 5[ (gogoproto.moretags) = "yaml:\"closing_fee\"" ];
    string liquidation_penalty  = 6[ (gogoproto.moretags) = "yaml:\"liquidation_penanlty\"" ];
    string creation_fee         = 7[ (gogoproto.moretags) = "yaml:\"creation_fee\"" ];
    bool is_vault_active        = 8[ (gogoproto.moretags) = "yaml:\"active_flag\"" ];
    string debt_cieling         = 9[ (gogoproto.moretags) = "yaml:\"debt_cieling\"" ];
    string debt_floor           = 10[ (gogoproto.moretags) = "yaml:\"debt_floor\"" ];
    bool is_psm_pair            = 11[ (gogoproto.moretags) = "yaml:\"is_psm_pair\"" ];
    string min_cr               = 12[ (gogoproto.moretags) = "yaml:\"min_cr\"" ];
    string pair_name            = 13 [ (gogoproto.moretags) = "yaml:\"pair_name\"" ];
    bool asset_out_oracle_price = 14 [ (gogoproto.moretags) = "yaml:\"asset_out_oracle\"" ];
    string assset_out_price     = 15 [ (gogoproto.moretags) = "yaml:\"assset_out_price\"" ];
    uint64 product_mapping_id   = 16 ;
  
  }